// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TransactionRowMobile > should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group group border-b-0!"
        data-testid="TableRow"
      >
        <td
          data-testid="TableRow__mobile"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-secondary-800 dark:bg-theme-background dim:border-theme-dim-700 dim:bg-theme-background w-full cursor-pointer overflow-hidden rounded border bg-white mb-3"
          >
            <div
              class="bg-theme-secondary-100 dim:bg-theme-dim-950 flex h-10 w-full items-center justify-between px-4 dark:bg-black"
            >
              <div
                class="max-w-32"
              >
                <div
                  class="flex flex-col gap-1 font-semibold"
                >
                  <span>
                    <span>
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="border-b border-transparent break-all transition-colors delay-100 duration-200 hover:border-current"
                        >
                          <span
                            class="text-sm"
                          >
                            <span>
                              <span>
                                <span
                                  class="no-ligatures text-theme-primary-600 dim:text-theme-dim-navy-600 cursor-pointer"
                                  data-testid="TransactionRow__id"
                                >
                                  ea63…c79b
                                </span>
                              </span>
                            </span>
                          </span>
                        </span>
                      </a>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="flex flex-row items-center"
              >
                <span
                  class="text-theme-secondary-700 dim:text-theme-dim-200 text-sm font-semibold sm:block"
                  data-testid="TransactionRow__timestamp"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </span>
              </div>
            </div>
            <div
              class="flex w-full flex-col gap-4 px-4 pt-3 pb-4 sm:grid sm:grid-cols-[200px_auto_130px] sm:pb-4"
            >
              <div
                class="flex flex-col gap-2 w-full"
                data-testid="TransactionRowMobile__label"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Transfer
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <div
                    class="flex flex-col gap-2"
                  >
                    <div
                      class="flex w-full flex-row gap-2"
                      data-testid="TransactionRowAddressing__container_advanced_sender"
                    >
                      <div
                        class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent dim:text-theme-dim-200 dim:border-theme-dim-700 text-xs leading-[15px] flex! h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                        data-testid="TransactionRowAddressing__label"
                      >
                        From
                      </div>
                      <div
                        class="flex grow items-center justify-between space-x-4 md:px-4 lg:px-0 xl:min-w-36"
                      >
                        <span
                          class="grow"
                        >
                          <span>
                            <div
                              class="grow"
                              data-testid="TransactionRowAddressing__address-container"
                            >
                              <div
                                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                              >
                                <span
                                  class="font-semibold text-sm text-theme-text"
                                  data-testid="Address__alias"
                                >
                                  <span>
                                    <span>
                                      <span
                                        class="no-ligatures transition-colors duration-200"
                                        data-testid="TruncateEnd"
                                      >
                                        Mainsail Wallet …
                                      </span>
                                    </span>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </span>
                        </span>
                        <span>
                          <span>
                            <button
                              class="ring-focus relative cursor-pointer focus:outline-hidden"
                              data-ring-focus-margin="-m-1"
                              data-testid="clipboard-icon__wrapper"
                              type="button"
                            >
                              <div
                                class="text-theme-secondary-700 dark:text-theme-secondary-600 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:text-white dark:hover:text-white"
                              >
                                <div
                                  style="height: 16px; width: 16px;"
                                >
                                  <svg
                                    id="copy"
                                    style="height: 100%; width: 100%;"
                                    viewBox="0 0 20 20"
                                    x="0"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                    y="0"
                                  >
                                    <g
                                      fill="none"
                                      stroke="currentColor"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="2"
                                    >
                                      <path
                                        d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                      />
                                      <path
                                        d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                      />
                                    </g>
                                  </svg>
                                </div>
                              </div>
                            </button>
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="flex w-full flex-row gap-2"
                      data-testid="TransactionRowAddressing__container_advanced_recipient"
                    >
                      <div
                        class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent dim:text-theme-dim-200 dim:border-theme-dim-700 text-xs leading-[15px] flex! h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                        data-testid="TransactionRowAddressing__label"
                      >
                        To
                      </div>
                      <div
                        class="flex grow items-center justify-between space-x-4 md:px-4 lg:px-0 xl:min-w-36"
                      >
                        <span
                          class="grow"
                        >
                          <span>
                            <div
                              class="grow"
                              data-testid="TransactionRowAddressing__address-container"
                            >
                              <div
                                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                              >
                                <span
                                  class="font-semibold text-sm text-theme-text"
                                  data-testid="Address__alias"
                                >
                                  <span>
                                    <span>
                                      <span
                                        class="no-ligatures transition-colors duration-200"
                                        data-testid="TruncateEnd"
                                      >
                                        Mainsail Wallet …
                                      </span>
                                    </span>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </span>
                        </span>
                        <span>
                          <span>
                            <button
                              class="ring-focus relative cursor-pointer focus:outline-hidden"
                              data-ring-focus-margin="-m-1"
                              data-testid="clipboard-icon__wrapper"
                              type="button"
                            >
                              <div
                                class="text-theme-secondary-700 dark:text-theme-secondary-600 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:text-white dark:hover:text-white"
                              >
                                <div
                                  style="height: 16px; width: 16px;"
                                >
                                  <svg
                                    id="copy"
                                    style="height: 100%; width: 100%;"
                                    viewBox="0 0 20 20"
                                    x="0"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                    y="0"
                                  >
                                    <g
                                      fill="none"
                                      stroke="currentColor"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="2"
                                    >
                                      <path
                                        d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                      />
                                      <path
                                        d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                      />
                                    </g>
                                  </svg>
                                </div>
                              </div>
                            </button>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Amount (ARK)
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <span
                    class="whitespace-nowrap text-sm font-semibold"
                    data-testid="Amount"
                  >
                    121
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Fiat Value
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    0 ARK
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRowMobile > should render 2`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group group border-b-0!"
        data-testid="TableRow"
      >
        <td
          data-testid="TableRow__mobile"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-secondary-800 dark:bg-theme-background dim:border-theme-dim-700 dim:bg-theme-background w-full cursor-pointer overflow-hidden rounded border bg-white mb-3"
          >
            <div
              class="bg-theme-secondary-100 dim:bg-theme-dim-950 flex h-10 w-full items-center justify-between px-4 dark:bg-black"
            >
              <div
                class="max-w-32"
              >
                <div
                  class="flex flex-col gap-1 font-semibold"
                >
                  <span>
                    <span>
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="border-b border-transparent break-all transition-colors delay-100 duration-200 hover:border-current"
                        >
                          <span
                            class="text-sm"
                          >
                            <span>
                              <span>
                                <span
                                  class="no-ligatures text-theme-primary-600 dim:text-theme-dim-navy-600 cursor-pointer"
                                  data-testid="TransactionRow__id"
                                >
                                  ea63…c79b
                                </span>
                              </span>
                            </span>
                          </span>
                        </span>
                      </a>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="flex flex-row items-center"
              >
                <span
                  class="text-theme-secondary-700 dim:text-theme-dim-200 text-sm font-semibold sm:block"
                  data-testid="TransactionRow__timestamp"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </span>
              </div>
            </div>
            <div
              class="flex w-full flex-col gap-4 px-4 pt-3 pb-4 sm:grid sm:grid-cols-[200px_auto_130px] sm:pb-4"
            >
              <div
                class="flex flex-col gap-2 w-full"
                data-testid="TransactionRowMobile__label"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Transfer
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <div
                    class="flex flex-col gap-2"
                  >
                    <div
                      class="flex w-full flex-row gap-2"
                      data-testid="TransactionRowAddressing__container_advanced_sender"
                    >
                      <div
                        class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent dim:text-theme-dim-200 dim:border-theme-dim-700 text-xs leading-[15px] flex! h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                        data-testid="TransactionRowAddressing__label"
                      >
                        From
                      </div>
                      <div
                        class="flex grow items-center justify-between space-x-4 md:px-4 lg:px-0 xl:min-w-36"
                      >
                        <span
                          class="grow"
                        >
                          <span>
                            <div
                              class="grow"
                              data-testid="TransactionRowAddressing__address-container"
                            >
                              <div
                                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                              >
                                <span
                                  class="font-semibold text-sm text-theme-text"
                                  data-testid="Address__alias"
                                >
                                  <span>
                                    <span>
                                      <span
                                        class="no-ligatures transition-colors duration-200"
                                        data-testid="TruncateEnd"
                                      >
                                        Mainsail Wallet …
                                      </span>
                                    </span>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </span>
                        </span>
                        <span>
                          <span>
                            <button
                              class="ring-focus relative cursor-pointer focus:outline-hidden"
                              data-ring-focus-margin="-m-1"
                              data-testid="clipboard-icon__wrapper"
                              type="button"
                            >
                              <div
                                class="text-theme-secondary-700 dark:text-theme-secondary-600 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:text-white dark:hover:text-white"
                              >
                                <div
                                  style="height: 16px; width: 16px;"
                                >
                                  <svg
                                    id="copy"
                                    style="height: 100%; width: 100%;"
                                    viewBox="0 0 20 20"
                                    x="0"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                    y="0"
                                  >
                                    <g
                                      fill="none"
                                      stroke="currentColor"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="2"
                                    >
                                      <path
                                        d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                      />
                                      <path
                                        d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                      />
                                    </g>
                                  </svg>
                                </div>
                              </div>
                            </button>
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="flex w-full flex-row gap-2"
                      data-testid="TransactionRowAddressing__container_advanced_recipient"
                    >
                      <div
                        class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent dim:text-theme-dim-200 dim:border-theme-dim-700 text-xs leading-[15px] flex! h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                        data-testid="TransactionRowAddressing__label"
                      >
                        To
                      </div>
                      <div
                        class="flex grow items-center justify-between space-x-4 md:px-4 lg:px-0 xl:min-w-36"
                      >
                        <span
                          class="grow"
                        >
                          <span>
                            <div
                              class="grow"
                              data-testid="TransactionRowAddressing__address-container"
                            >
                              <div
                                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                              >
                                <span
                                  class="font-semibold text-sm text-theme-text"
                                  data-testid="Address__alias"
                                >
                                  <span>
                                    <span>
                                      <span
                                        class="no-ligatures transition-colors duration-200"
                                        data-testid="TruncateEnd"
                                      >
                                        Mainsail Wallet …
                                      </span>
                                    </span>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </span>
                        </span>
                        <span>
                          <span>
                            <button
                              class="ring-focus relative cursor-pointer focus:outline-hidden"
                              data-ring-focus-margin="-m-1"
                              data-testid="clipboard-icon__wrapper"
                              type="button"
                            >
                              <div
                                class="text-theme-secondary-700 dark:text-theme-secondary-600 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:text-white dark:hover:text-white"
                              >
                                <div
                                  style="height: 16px; width: 16px;"
                                >
                                  <svg
                                    id="copy"
                                    style="height: 100%; width: 100%;"
                                    viewBox="0 0 20 20"
                                    x="0"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                    y="0"
                                  >
                                    <g
                                      fill="none"
                                      stroke="currentColor"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="2"
                                    >
                                      <path
                                        d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                      />
                                      <path
                                        d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                      />
                                    </g>
                                  </svg>
                                </div>
                              </div>
                            </button>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Amount (ARK)
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <span
                    class="whitespace-nowrap text-sm font-semibold"
                    data-testid="Amount"
                  >
                    121
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Fiat Value
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    0 ARK
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRowMobile > should render with currency 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group group border-b-0!"
        data-testid="TableRow"
      >
        <td
          data-testid="TableRow__mobile"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-secondary-800 dark:bg-theme-background dim:border-theme-dim-700 dim:bg-theme-background w-full cursor-pointer overflow-hidden rounded border bg-white mb-3"
          >
            <div
              class="bg-theme-secondary-100 dim:bg-theme-dim-950 flex h-10 w-full items-center justify-between px-4 dark:bg-black"
            >
              <div
                class="max-w-32"
              >
                <div
                  class="flex flex-col gap-1 font-semibold"
                >
                  <span>
                    <span>
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="border-b border-transparent break-all transition-colors delay-100 duration-200 hover:border-current"
                        >
                          <span
                            class="text-sm"
                          >
                            <span>
                              <span>
                                <span
                                  class="no-ligatures text-theme-primary-600 dim:text-theme-dim-navy-600 cursor-pointer"
                                  data-testid="TransactionRow__id"
                                >
                                  ea63…c79b
                                </span>
                              </span>
                            </span>
                          </span>
                        </span>
                      </a>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="flex flex-row items-center"
              >
                <span
                  class="text-theme-secondary-700 dim:text-theme-dim-200 text-sm font-semibold sm:block"
                  data-testid="TransactionRow__timestamp"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </span>
              </div>
            </div>
            <div
              class="flex w-full flex-col gap-4 px-4 pt-3 pb-4 sm:grid sm:grid-cols-[200px_auto_130px] sm:pb-4"
            >
              <div
                class="flex flex-col gap-2 w-full"
                data-testid="TransactionRowMobile__label"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Transfer
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <div
                    class="flex flex-col gap-2"
                  >
                    <div
                      class="flex w-full flex-row gap-2"
                      data-testid="TransactionRowAddressing__container_advanced_sender"
                    >
                      <div
                        class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent dim:text-theme-dim-200 dim:border-theme-dim-700 text-xs leading-[15px] flex! h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                        data-testid="TransactionRowAddressing__label"
                      >
                        From
                      </div>
                      <div
                        class="flex grow items-center justify-between space-x-4 md:px-4 lg:px-0 xl:min-w-36"
                      >
                        <span
                          class="grow"
                        >
                          <span>
                            <div
                              class="grow"
                              data-testid="TransactionRowAddressing__address-container"
                            >
                              <div
                                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                              >
                                <div
                                  class="relative grow leading-[17px] sm:leading-5 text-left"
                                >
                                  <span>
                                    <span>
                                      <span
                                        class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-sm absolute w-full"
                                        data-testid="Address__address"
                                      >
                                        0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                                      </span>
                                    </span>
                                  </span>
                                  <span>
                                     
                                  </span>
                                </div>
                              </div>
                            </div>
                          </span>
                        </span>
                        <span>
                          <span>
                            <button
                              class="ring-focus relative cursor-pointer focus:outline-hidden"
                              data-ring-focus-margin="-m-1"
                              data-testid="clipboard-icon__wrapper"
                              type="button"
                            >
                              <div
                                class="text-theme-secondary-700 dark:text-theme-secondary-600 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:text-white dark:hover:text-white"
                              >
                                <div
                                  style="height: 16px; width: 16px;"
                                >
                                  <svg
                                    id="copy"
                                    style="height: 100%; width: 100%;"
                                    viewBox="0 0 20 20"
                                    x="0"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                    y="0"
                                  >
                                    <g
                                      fill="none"
                                      stroke="currentColor"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="2"
                                    >
                                      <path
                                        d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                      />
                                      <path
                                        d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                      />
                                    </g>
                                  </svg>
                                </div>
                              </div>
                            </button>
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="flex w-full flex-row gap-2"
                      data-testid="TransactionRowAddressing__container_advanced_recipient"
                    >
                      <div
                        class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent dim:text-theme-dim-200 dim:border-theme-dim-700 text-xs leading-[15px] flex! h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                        data-testid="TransactionRowAddressing__label"
                      >
                        To
                      </div>
                      <div
                        class="flex grow items-center justify-between space-x-4 md:px-4 lg:px-0 xl:min-w-36"
                      >
                        <span
                          class="grow"
                        >
                          <span>
                            <div
                              class="grow"
                              data-testid="TransactionRowAddressing__address-container"
                            >
                              <div
                                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                              >
                                <span
                                  class="font-semibold text-sm text-theme-text"
                                  data-testid="Address__alias"
                                >
                                  <span>
                                    <span>
                                      <span
                                        class="no-ligatures transition-colors duration-200"
                                        data-testid="TruncateEnd"
                                      >
                                        Mainsail Wallet …
                                      </span>
                                    </span>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </span>
                        </span>
                        <span>
                          <span>
                            <button
                              class="ring-focus relative cursor-pointer focus:outline-hidden"
                              data-ring-focus-margin="-m-1"
                              data-testid="clipboard-icon__wrapper"
                              type="button"
                            >
                              <div
                                class="text-theme-secondary-700 dark:text-theme-secondary-600 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:text-white dark:hover:text-white"
                              >
                                <div
                                  style="height: 16px; width: 16px;"
                                >
                                  <svg
                                    id="copy"
                                    style="height: 100%; width: 100%;"
                                    viewBox="0 0 20 20"
                                    x="0"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                    y="0"
                                  >
                                    <g
                                      fill="none"
                                      stroke="currentColor"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="2"
                                    >
                                      <path
                                        d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                      />
                                      <path
                                        d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                      />
                                    </g>
                                  </svg>
                                </div>
                              </div>
                            </button>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Amount (DARK)
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <span
                    class="whitespace-nowrap text-sm font-semibold"
                    data-testid="Amount"
                  >
                    121
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Fiat Value
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    0 DARK
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRowMobile > should render with currency 2`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group group border-b-0!"
        data-testid="TableRow"
      >
        <td
          data-testid="TableRow__mobile"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-secondary-800 dark:bg-theme-background dim:border-theme-dim-700 dim:bg-theme-background w-full cursor-pointer overflow-hidden rounded border bg-white mb-3"
          >
            <div
              class="bg-theme-secondary-100 dim:bg-theme-dim-950 flex h-10 w-full items-center justify-between px-4 dark:bg-black"
            >
              <div
                class="max-w-32"
              >
                <div
                  class="flex flex-col gap-1 font-semibold"
                >
                  <span>
                    <span>
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="border-b border-transparent break-all transition-colors delay-100 duration-200 hover:border-current"
                        >
                          <span
                            class="text-sm"
                          >
                            <span>
                              <span>
                                <span
                                  class="no-ligatures text-theme-primary-600 dim:text-theme-dim-navy-600 cursor-pointer"
                                  data-testid="TransactionRow__id"
                                >
                                  ea63…c79b
                                </span>
                              </span>
                            </span>
                          </span>
                        </span>
                      </a>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="flex flex-row items-center"
              >
                <span
                  class="text-theme-secondary-700 dim:text-theme-dim-200 text-sm font-semibold sm:block"
                  data-testid="TransactionRow__timestamp"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </span>
              </div>
            </div>
            <div
              class="flex w-full flex-col gap-4 px-4 pt-3 pb-4 sm:grid sm:grid-cols-[200px_auto_130px] sm:pb-4"
            >
              <div
                class="flex flex-col gap-2 w-full"
                data-testid="TransactionRowMobile__label"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Transfer
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <div
                    class="flex flex-col gap-2"
                  >
                    <div
                      class="flex w-full flex-row gap-2"
                      data-testid="TransactionRowAddressing__container_advanced_sender"
                    >
                      <div
                        class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent dim:text-theme-dim-200 dim:border-theme-dim-700 text-xs leading-[15px] flex! h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                        data-testid="TransactionRowAddressing__label"
                      >
                        From
                      </div>
                      <div
                        class="flex grow items-center justify-between space-x-4 md:px-4 lg:px-0 xl:min-w-36"
                      >
                        <span
                          class="grow"
                        >
                          <span>
                            <div
                              class="grow"
                              data-testid="TransactionRowAddressing__address-container"
                            >
                              <div
                                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                              >
                                <div
                                  class="relative grow leading-[17px] sm:leading-5 text-left"
                                >
                                  <span>
                                    <span>
                                      <span
                                        class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-sm absolute w-full"
                                        data-testid="Address__address"
                                      >
                                        0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                                      </span>
                                    </span>
                                  </span>
                                  <span>
                                     
                                  </span>
                                </div>
                              </div>
                            </div>
                          </span>
                        </span>
                        <span>
                          <span>
                            <button
                              class="ring-focus relative cursor-pointer focus:outline-hidden"
                              data-ring-focus-margin="-m-1"
                              data-testid="clipboard-icon__wrapper"
                              type="button"
                            >
                              <div
                                class="text-theme-secondary-700 dark:text-theme-secondary-600 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:text-white dark:hover:text-white"
                              >
                                <div
                                  style="height: 16px; width: 16px;"
                                >
                                  <svg
                                    id="copy"
                                    style="height: 100%; width: 100%;"
                                    viewBox="0 0 20 20"
                                    x="0"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                    y="0"
                                  >
                                    <g
                                      fill="none"
                                      stroke="currentColor"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="2"
                                    >
                                      <path
                                        d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                      />
                                      <path
                                        d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                      />
                                    </g>
                                  </svg>
                                </div>
                              </div>
                            </button>
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="flex w-full flex-row gap-2"
                      data-testid="TransactionRowAddressing__container_advanced_recipient"
                    >
                      <div
                        class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent dim:text-theme-dim-200 dim:border-theme-dim-700 text-xs leading-[15px] flex! h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                        data-testid="TransactionRowAddressing__label"
                      >
                        To
                      </div>
                      <div
                        class="flex grow items-center justify-between space-x-4 md:px-4 lg:px-0 xl:min-w-36"
                      >
                        <span
                          class="grow"
                        >
                          <span>
                            <div
                              class="grow"
                              data-testid="TransactionRowAddressing__address-container"
                            >
                              <div
                                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                              >
                                <span
                                  class="font-semibold text-sm text-theme-text"
                                  data-testid="Address__alias"
                                >
                                  <span>
                                    <span>
                                      <span
                                        class="no-ligatures transition-colors duration-200"
                                        data-testid="TruncateEnd"
                                      >
                                        Mainsail Wallet …
                                      </span>
                                    </span>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </span>
                        </span>
                        <span>
                          <span>
                            <button
                              class="ring-focus relative cursor-pointer focus:outline-hidden"
                              data-ring-focus-margin="-m-1"
                              data-testid="clipboard-icon__wrapper"
                              type="button"
                            >
                              <div
                                class="text-theme-secondary-700 dark:text-theme-secondary-600 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:text-white dark:hover:text-white"
                              >
                                <div
                                  style="height: 16px; width: 16px;"
                                >
                                  <svg
                                    id="copy"
                                    style="height: 100%; width: 100%;"
                                    viewBox="0 0 20 20"
                                    x="0"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                    y="0"
                                  >
                                    <g
                                      fill="none"
                                      stroke="currentColor"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="2"
                                    >
                                      <path
                                        d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                      />
                                      <path
                                        d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                      />
                                    </g>
                                  </svg>
                                </div>
                              </div>
                            </button>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Amount (DARK)
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <span
                    class="whitespace-nowrap text-sm font-semibold"
                    data-testid="Amount"
                  >
                    121
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Fiat Value
                </span>
                <div
                  class="text-theme-secondary-900 dark:text-theme-secondary-200 dim:text-theme-dim-50 text-sm font-semibold"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    0 DARK
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
